--- a/_includes/head_ar.html
+++ b/_includes/head_ar.html
@@ -2,7 +2,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{site.title_ar}} | {{ page.title }}</title>
+    <title>{{site.title_ar}} | {{ page.title | default: site.description_ar }}</title>
     {%- seo -%}
     <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
     {%- feed_meta -%}
