--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -11,4 +11,59 @@
   /* Darker background on mouse-over */
   .btn:hover {
     background-color: RoyalBlue;
+  }
+
+  /* Dropdown menu styles */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+
+  .dropdown-toggle {
+    cursor: pointer;
+    padding-right: 15px;
+    position: relative;
+  }
+
+  .dropdown-toggle::after {
+    content: " ▼";
+    font-size: 0.7em;
+  }
+
+  .dropdown-menu {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    right: 0;
+  }
+
+  .dropdown-menu a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: right;
+  }
+
+  .dropdown-menu a:hover {
+    background-color: #f1f1f1;
+  }
+
+  .dropdown:hover .dropdown-menu {
+    display: block;
+  }
+
+  @media screen and (max-width: 600px) {
+    .dropdown-menu {
+      position: static;
+      box-shadow: none;
+      background-color: transparent;
+    }
+    
+    .dropdown-menu a {
+      padding-right: 30px;
+    }
   } 
