--- a/_includes/header_ar.html
+++ b/_includes/header_ar.html
@@ -49,11 +49,19 @@
               <div class="dropdown">
                 <span class="page-link dropdown-toggle">{{ parent_menu | escape }}</span>
                 <div class="dropdown-menu">
+                  {%- comment -%}
+                  Collect and sort pages by menu_order
+                  {%- endcomment -%}
+                  {%- assign menu_pages = "" | split: "" -%}
                   {%- for path in page_paths -%}
                     {%- assign my_page = site.pages | where: "path", path | first -%}
                     {%- if my_page.lang == "ar" and my_page.parent_menu == parent_menu -%}
-                      <a href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+                      {%- assign menu_pages = menu_pages | push: my_page -%}
                     {%- endif -%}
+                  {%- endfor -%}
+                  {%- assign sorted_pages = menu_pages | sort: "menu_order" -%}
+                  {%- for my_page in sorted_pages -%}
+                    <a href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
                   {%- endfor -%}
                 </div>
               </div>
